# mondemand-python

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  config.h.in  default.nix  demo.py  mondemand.h  mondemand.i  mondemand.py  mondemand_build.py  mondemand_wrap.c  mondemandlib.h  mondemandlib.i  setup.cfg  setup.py
mondemand/: client.py  lwes_transport.py  utils.py
nix/: lwes.nix  mondemand.nix
