[metadata]
name=mondemand
url=https://github.com/mondemand/mondemand-python
description=MonDemand python bindings
long_description=file:README.md
license=BSD
maintainer=Derek Kulinski
maintainer_email=d@kulinski.us
platforms=
    POSIX
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires= >=2.7, !=3.0, !=3.1, !=3.2, !=3.3, !=3.4
zip_safe=false
setup_requires=
    setuptools_scm
    cffi ~= 1.11.5
install_requires=
    cffi ~= 1.11.5
    six
    typing
packages=find:
